# model-finetune-ui

./: .env.example  .git-update  .gitignore  25feature_b_coefficients.csv  25feature_range_data.csv  25feature_w_coefficients.csv  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  Dockerfile  Makefile  README.md  UV_CONVERSION_SUMMARY.md  app.py  app_minimal.py  config.py  packages.txt  pyproject.toml  requirements-streamlit.txt  requirements.txt  run.py  streamlit_app.py
.github/workflows/: deploy-streamlit.yml
.streamlit/: config.toml
core/: __init__.py  processor.py
docs/: FILE_STRUCTURE.md
docs/plans/: 2026-02-10-dual-encryption-format.md
examples/: generate_sample_data.py  sample_data_generator.py
examples/sample_data/: A_fine_tune_coefficients.csv  README.md  a_coefficients.csv  b_coefficients.csv  range_data.csv  w_coefficients.csv
scripts/: deploy.sh  network-check.sh  run-wsl.sh  setup-uv.sh
src/model_finetune_ui/: __init__.py  app.py  config.py  run.py
src/model_finetune_ui/core/: __init__.py  processor.py
src/model_finetune_ui/examples/: __init__.py  generate_sample_data.py
src/model_finetune_ui/utils/: __init__.py  config_manager.py  decryption.py  encryption.py  file_handler.py  logger.py  template_generator.py  utils.py  validator.py
static/: style.css
tests/: __init__.py  conftest.py
tests/integration/: test_config_flow.py  test_decrypt_workflow.py  test_full_workflow.py
tests/unit/: test_config_manager.py  test_decryption.py  test_decryption_validation.py  test_hex_reverse.py  test_processor.py  test_template_generator.py  test_validator.py
utils/: __init__.py  encryption.py  file_handler.py  template_generator.py  utils.py  validator.py
